<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Bird Note</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Bird Note</string>
    <string name="ref_guide_icon">Reference Guide</string>
    <string name="search_icon">Search</string>
    <string name="birds_seen_icon">Birds Seen</string>
    <string name="wishlist_icon">Wishlist</string>
    <string name="map_view_icon">Map View</string>
    <string name="logo_img">Bird Note Logo</string>
    <string name="icon">Icon</string>
    <string name="image">Image thumbnail</string>
    <string name="search">Test</string>
    <string name="toggle">Toggle</string>
    <string name="search_list">Search List</string>
    <string name="test">Testing 123</string>
    <string name="ref_guide_title">A-Z Reference Guide</string>
    <string name="birds_seen_title">My Birds Seen List</string>
    <string name="wishlist_title">My Wishlist</string>
    <string name="search_results_title">Search Results</string>
    <string name="empty"></string>
    <string name="main_image">Main Image</string>
    <string name="atoz">Toggle A to Z</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Search Screen Drop Down Labels  -->
    <string name="primary_colour">Primary Colour</string>
    <string name="secondary_colour">Secondary Colour</string>
    <string name="crown_colour">Crown Colour</string>
    <string name="bill_length">Bill Length</string>
    <string name="bill_colour">Bill Colour</string>
    <string name="tail_shape">Tail Shape</string>
    <string name="search_buttom">Search</string>
    
    <!-- Menu Items  -->
    <string name="add_to_seen">Add to Birds Seen List</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="share_sighting">Share Sighting</string>
    <string name="delete">Remove bird from List</string>
    
    <!-- Profile Sub Headings  -->
    <string name="status_sub_head">Status</string>
    <string name="identification_sub_head">Identification</string>
    <string name="diet_sub_head">Diet</string>
    <string name="breeding_sub_head">Breeding</string>
    <string name="wintering_habits_sub_head">Wintering Habits</string>
    <string name="where_to_see_sub_head">Where to See</string>
    <string name="conservation_status_sub_head">Conservation Status</string>
    
    <!-- Welcome Activity  -->
    <string name="welcome_title">Welcome to Bird Note</string>
    <string name="welcome_text">Select an option below to start using it.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_welcome">Welcome</string>
    
    <!-- Log in  -->
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="title_activity_login">Login</string>
    
    <!-- Register  -->
    <string name="real_name">Name</string>
    <string name="user_name">Username</string>
    <string name="user_password_confirmation">Confirm Password</string>
    <string name="title_activity_register">Register</string>
</resources>