<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_to_seen"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/add_to_seen"/>
    <item
        android:id="@+id/add_to_wishlist"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/add_to_wishlist"/>
    
    <item
        android:id="@+id/share_sighting"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/share_sighting"/>
    
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/delete"/>
</menu>