<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/search_atoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="18dp"
            android:background="#ffffff"
            android:src="@drawable/atoz"
            android:contentDescription="@string/atoz"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/search_list"
            android:inputType="text"
            android:paddingBottom="14dp"
            android:paddingRight="20dp"
            android:paddingTop="14dp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="#1d1e24">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingTop="6dp"
            android:text="@string/search_results_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/num_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:paddingBottom="6dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:text="@string/empty"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>