<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingBottom="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/div_bar_1"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_marginTop="-8dp"
                android:background="#e19132"
                android:text="@string/empty" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="false"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/latin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/div_bar_2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#e19132"
            android:text="@string/empty" />

        <ImageView
            android:id="@+id/main_profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/main_image"
            android:src="@drawable/hawk_big" />

        <TextView
            android:id="@+id/div_bar_3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#e19132"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/status_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/status_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/identification_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/identification_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/diet_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/diet_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/breeding_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/breeding_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/breeding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/wintering_habits_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/wintering_habits_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wintering_habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/where_to_see_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/where_to_see_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/where_to_see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/conservation_status_sub_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/conservation_status_sub_head"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/conservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textIsSelectable="false" />

        <TextView
            android:id="@+id/div_bar_4"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="#e19132"
            android:text="@string/empty" />

    </LinearLayout>

</ScrollView>